cmake_minimum_required(VERSION 3.26)
project(CPPModulesProject)

set(CMAKE_CXX_STANDARD 98)

add_executable(CPPModulesProject
        CPP05/ex03/AForm.cpp
        CPP05/ex03/Bureaucrat.cpp
        CPP05/ex03/Intern.cpp
        CPP05/ex03/main.cpp
        CPP05/ex03/PresidentialPardonForm.cpp
        CPP05/ex03/RobotomyRequestForm.cpp
        CPP05/ex03/ShrubberyCreationForm.cpp

)
